cli-test/__tests__/__snapshots__/cli.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with --get-yargs-completions 1`] = `
Object {
  "stderr": "",
  "stdout": "like
lint
lint.sub.thing
lint.sub.hiddenThing
",
}
`;

exports[`with --no-scripts 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`test\`
test script
",
}
`;

exports[`with --require 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`log\` : echo \\"log\\"
log
",
}
`;

exports[`with a missing config 1`] = `
Object {
  "stderr": "Unable to find JS config at \\"./something-that-does-not-exist.js\\". https://github.com/Markforged/nps/blob/master/other/ERRORS_AND_WARNINGS.md#unable-to-find-config
",
  "stdout": "",
}
`;

exports[`with arguments passed through 1`] = `
Object {
  "stderr": "You provided one or more invalid flags: -- Did you forget to put your command in quotes? https://github.com/Markforged/nps/blob/master/other/ERRORS_AND_WARNINGS.md#invalid-flags
/app/dist/bin-utils/parser.js:125
    throw new Error(\`invalid flag(s) passed: \${invalidFlags}\`);
    ^

Error: invalid flag(s) passed: --
    at parse (/app/dist/bin-utils/parser.js:125:11)
    at Object.<anonymous> (/app/dist/bin/nps.js:22:33)
    at Module._compile (node:internal/modules/cjs/loader:1706:14)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:171:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.20.0
",
  "stdout": "",
}
`;

exports[`with config with default script 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`default\` : echo \\"default script\\"
default script
",
}
`;

exports[`with multiple positional arguments 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`multiple\` : echo \\"hello foo bar nps\\"
hello foo bar nps
",
}
`;

exports[`with no positional arguments 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`none\` : echo \\"hello nps\\" -- foo bar
hello nps -- foo bar
",
}
`;

exports[`with prefix 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`lint.sub.thing.script\` : echo \\"deeply nested thing\\"
deeply nested thing
",
}
`;

exports[`with second positional argument 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`second\` : echo \\"hello bar nps\\" -- foo
hello bar nps -- foo
",
}
`;

exports[`with silent option set true 1`] = `
Object {
  "stderr": "",
  "stdout": "silent
",
}
`;

exports[`with single positional argument 1`] = `
Object {
  "stderr": "",
  "stdout": "nps is executing \`single\` : echo \\"hello foo nps\\"
hello foo nps
",
}
`;
